--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,13 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
+/android/
+/ios/
+/linux/
+/macos/
+/test/
+/web/ 
+/windows/
 
 # Symbolication related
 app.*.symbols
